# course-data-engineering-dtc

./: .gitignore  README.md
01-docker-terraform/: docker-compose.yaml  main.tf  pyproject.toml  terraform.MD  upload-data.ipynb  upload-data.py
01-docker-terraform/1-terraform-gcp/: main.tf  variables.tf
01-docker-terraform/2-docker-sql/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  upload-data.ipynb
01-docker-terraform/3-homework/: homework.ipynb  pyproject.toml
01-docker-terraform/terraform/: instructions.md
02-workflow-orchestration/: homework.ipynb
03-data-warehouse/: homework.ipynb  homework.sql
