[tool.poetry]
name = "2-docker-sql"
version = "0.1.0"
description = ""
authors = ["Erick Calderin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
sqlalchemy = "^2.0.25"
pyarrow = "^15.0.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
